--- a/_episodes/1.1_refresh_bash.md
+++ b/_episodes/1.1_refresh_bash.md
@@ -107,6 +107,30 @@ $ rm empty.txt /home/training/empty-second.txt
 
 ### Visualising contents of text files.
 
+Let’s create a text file with some words in it. We’ll use a popular, friendly text editor called nano:
+```
+$ nano words.txt
+```
+- In the editor screen, write something random.
+- To save this text, press Ctrl-O, then Enter.
+- To exit, press Ctrl-X.
+
+- Now we want to visualise the contents of this file on our terminal.
+- We can use cat to display it all in one go:
+```
+$ cat words.txt
+```
+```
+- random words that we just saved in this file
+```
+
+For very long files, we might want to be able to navigate the content in chunks. We can achieve this with less:
+```
+$ less words.txt
+```
+- Go forward by pressing Ctrl-F, go backwards with Ctrl-B.
+- Quit the navigation by pressing q.
+
 
 
 {% include links.md %}
