--- a/_episodes/1.1_refresh_bash.md
+++ b/_episodes/1.1_refresh_bash.md
@@ -1,22 +1,22 @@
 ---
-title: "Set up"
+title: "Refresh your command-line (bash) skills"
 teaching: 0
 exercises: 10
 questions:
-- "How do I securely log into a Nimbus VM instance?"
-- "How do I download the required input files on the Nimbus VM instance?"
+- "What is a terminal window?"
+- "How are your basic bash skills?"
 objectives:
-- "Successfully log in to a Nimbus instance using ssh."
-- "Download input data."
+- "Refresh your bash skills"
+- "Run some basic bash commands"
 keypoints:
-- Nimbus VM instances from Pawsey provide on-demand access for scalability.
-- We use a ssh client to connect to a Linux instance.
+- "The two important commands we used were 'pwd' and 'cd'"
+
 ---
 
 
 
 
-### Handling directories and files.
+### Navigate in a bash terminal
 
 Let’s first navigate to our instance’s home (you could omit ~ to get home, too):
 
@@ -46,6 +46,8 @@ $ pwd
 ```
 /home
 ```
+
+### Handling directories and files
 
 Make a directory called `temp`
 
