--- a/_episodes/1.1_refresh_bash.md
+++ b/_episodes/1.1_refresh_bash.md
@@ -1,5 +1,5 @@
 ---
-title: "Refresh your command-line (bash) skills"
+title: "Refresh your unix shell (bash) skills"
 teaching: 0
 exercises: 10
 questions:
