--- a/_episodes/1.0_Learning_objectives.md
+++ b/_episodes/1.0_Learning_objectives.md
@@ -3,6 +3,7 @@ title: "Day 1 - Learning objectives"
 teaching: 10
 exercises: 0
 questions:
+- "How to use RNA-sequencing for differential expression analysis?"
 - "How to refresh your unix shell (bash) skills?"
 - "What is Nextflow and why use nfcore-rnaseq?"
 - "How to securely log-in to a Nimbus VM instance?"
@@ -17,7 +18,22 @@ keypoints:
 - XXX
 ---
 
-#### How to refresh your unix shell (bash) skills?
+#### RNA-Seq
+```
+- What is RNA-Seq?
+- What are the main applications of RNA-Seq
+- How does a basic RNA-seq workflow look like?
+- What is the experimental case-study for this workshop?
+```
+
+#### A specific case-study using RNA-Seq
+```
+. Knockout mouse model to study Williams-Beuren Syndrome (WBS)
+. Experimental design
+. Experimental question
+```
+
+#### Refresh your unix shell (bash) skills
 ```
 - Opening a terminal window.
 - Handling directories and files.
@@ -31,14 +47,14 @@ keypoints:
 - Use nfcore’s rnaseq pipeline to transform raw sequencing data into analysis ready count data.
 ```
 
-#### A platform to run nfcore-rnaseq pipeline 
+#### Pawsey/Nimbus VM: A platform to run nfcore-rnaseq pipeline 
 ```
 - The Pawsey/Nimbus virtual machine (VM)
 - Introduction to trainee VMs from Pawsey
 - How to log on to a trainee VM?
 ```
 
-#### Run nfcore-rnaseq
+#### How to run nfcore-rnaseq on the Pawsey/Nimbus VM
 ```
 . What are basic steps involved?
 . What are the main inputs?
@@ -46,12 +62,7 @@ keypoints:
 . Count matrix for Step II: Downstream analysis
 ```
 
-#### A specifc case study using RNA-Seq
-```
-. Knockout mouse model to study Williams-Beuren Syndrome (WBS)
-. Experimental design
-. Experimental question
-```
+
 ___
 **Notes**   
 <sup id="f1">1[↩](#a1)</sup> Here is a list of ['nfcore pipelines'](https://nf-co.re/pipelines/).
