Update and rename 2.3_Trimming.md to 2.31_Trimming.md

--- a/_episodes/2.31_Trimming.md
+++ b/_episodes/2.31_Trimming.md
@@ -17,6 +17,9 @@ keypoints:
 ---
 
 
+
+
+
 - Trimming is sometimes performed to improve the quality of the raw data and potentially improve its mappability. 
 - There are several ways to perform trimming:
   - Removal of poor quality reads or bases (e.g. ends of reads)
@@ -24,12 +27,9 @@ keypoints:
   - Removal of polyA tails
 
 
-> ## Note for the curious
-> 
-> Be very wary about trimming RNA sequencing data
-> Trimming of poor quality reads can affect gene expression estimates (Williams at el., 2016)
+## Note for the curious
+ 
+Be very wary about trimming RNA sequencing data
+Trimming of poor quality reads can affect gene expression estimates (Williams at el., 2016)
 
-> Trimming of high quality adapter sequences was shown to increase quality and reliability of biological signals in RNA-seq data (Dozmorov et al., 2015)
-> 
-{: .callout}
-
+Trimming of high quality adapter sequences was shown to increase quality and reliability of biological signals in RNA-seq data (Dozmorov et al., 2015)
