--- a/_episodes/2.3_Trimming.md
+++ b/_episodes/2.3_Trimming.md
@@ -1,28 +1,36 @@
 ---
 title: "Raw data and quality checking"
-teaching: 10
-exercises: 0
+teaching: 5
+exercises: 10
 questions:
-- "What is FastQ?"
-- "How to evaluate the quality using fastQC"
-
+- "Why trim RNA seqeuncig reads?"
 
 objectives:
-- "Understand FASTQ format"
-- " Understand the quality metrix of FASTQ using fastQC"
+- "Understand the requirement for trimming RNA sequencing reads"
+- "Understand the pros and cons of trimming"
+
 keypoints:
 - 
 - 
 ---
 
-> ## Challenge
-> 
-> Open a fastQ file
-> How many sequences were in SRR3473984.fastq?
-> What are the lengths of the reads in SRR3473984.fastq?
-> Which part of the reads tend to have worse per base sequence quality? 
+- Trimming is sometimes performed to improve the quality of the raw data and potentially improve its mappability. There are several ways to perform trimming:
+  - Removal of poor quality reads or bases (e.g. ends of reads)
+  - Removal of adapter sequences
+  - Removal of polyA tails
 
-> When inspecting FastQC reports for RNA seq data, you may notice the categories “Per base sequence content” and “Sequence Duplication Levels” marked as failing QC. Why is this?
+__NOTE:__
+- Be very wary about trimming RNA sequencing data
+  - Trimming of poor quality reads can affect gene expression estimates (Williams at el., 2016)
 
-{: .challenge}
+- Trimming of high quality adapter sequences was shown to increase quality and reliability of biological signals in RNA-seq data (Dozmorov et al., 2015)
+
+
+__CHALLENGE__
+- From looking into the results folder, can you tell :
+  - Which tool does nfcore-rnaseq use for read-trimming?
+  - Was there an effect of the trimming step on the sample? Choose one sample e.g. SRR3473989
+    - Which tool did you use for visualisation of the quality? Before and after trimming?
+    - Which folders in the 'results' did you need to access? 
+  
 
