--- a/_episodes/2.2_fastQ_and_fastQC.md
+++ b/_episodes/2.2_fastQ_and_fastQC.md
@@ -15,14 +15,15 @@ keypoints:
 - 
 ---
 
-> ## Challenge
-> 
-> Open a fastQ file
-> How many sequences were in SRR3473984.fastq?
-> What are the lengths of the reads in SRR3473984.fastq?
-> Which part of the reads tend to have worse per base sequence quality? 
+__Challenge__
+- Identify
+  - How many sequences were in SRR3473989_selected.fastq?
+  - What are the lengths of the reads in SRR3473989.fastq?
+  - Which part of the reads tend to have worse per base sequence quality? `Hint`- Use the tool for visualisation of read quality 
 
-> When inspecting FastQC reports for RNA seq data, you may notice the categories “Per base sequence content” and “Sequence Duplication Levels” marked as failing QC. Why is this?
+- When inspecting FastQC reports for RNA seq data, you may notice the categories “Per base sequence content” and “Sequence Duplication Levels” marked as failing QC. 
+  - Why do you think this is?
+  - Is it still ok to use these samples?
 
-{: .challenge}
+
 
