--- a/_episodes/1.0_Learning_objectives.md
+++ b/_episodes/1.0_Learning_objectives.md
@@ -40,6 +40,15 @@ keypoints:
 - Visualising contents of text files.
 ```
 
+
+#### Basic steps in the differential expression pipeline
+```
+- Check sequencing read quality
+- Trimming seqeuncing reads 
+- Alignment against reference and visualisation
+- Differential Expression Analysis
+```
+
 #### Step I :  Why use nfcore-rnaseq?
 ```
 - A typical bioinformatics workflow - too complicated?
