--- a/_episodes/1.0_Learning_objectives.md
+++ b/_episodes/1.0_Learning_objectives.md
@@ -3,8 +3,8 @@ title: "Day 1 - Learning objectives"
 teaching: 5
 exercises: 0
 questions:
-- "What's RNA-Seq?"
-- "What's the case-study for this workshop?"
+- "What is RNA-Seq?"
+- "What is the case-study for this workshop?"
 - "How to use bash terminal?"
 - "What are the steps in differential expression analysis?"
 - "Nextfow workflows for Bioinformatics: Why bother?"
