--- a/_episodes/2.2_fastQ_and_fastQC.md
+++ b/_episodes/2.2_fastQ_and_fastQC.md
@@ -21,9 +21,8 @@ __Challenge__
   - What are the lengths of the reads in SRR3473989.fastq?
   - Which part of the reads tend to have worse per base sequence quality? `Hint`- Use the tool for visualisation of read quality 
 
-- When inspecting FastQC reports for RNA seq data, you may notice the categories “Per base sequence content” and “Sequence Duplication Levels” marked as failing QC. 
-  - Why do you think this is?
-  - Is it still ok to use these samples?
-
+- Download one of the fastqc reports.
+  - What do you think each of the components means? Refer to the documentation if needed.
+  - Do you think this dataset is of “good” quality? 
 
 
