--- a/_episodes/2.1_The_pipeline.md
+++ b/_episodes/2.1_The_pipeline.md
@@ -1,5 +1,5 @@
 ---
-title: "A basic differential expression (DE) pipeline"
+title: "A typical differential expression (DE) pipeline"
 teaching: 10
 exercises: 0
 questions:
