--- a/_episodes/2.1_The_pipeline.md
+++ b/_episodes/2.1_The_pipeline.md
@@ -20,7 +20,7 @@ keypoints:
 </p>
 
 
-The basic steps in the differential expression pipeline include:
+The basic steps in a differential expression (DE) pipeline include:
 - __Raw data and quality checking__
   - Obtain sequencing data in [Fastq](https://sapac.support.illumina.com/bulletins/2016/04/fastq-files-explained.html) format 
   - Quality checking with [fastQC](https://www.bioinformatics.babraham.ac.uk/projects/fastqc/) and [multiQC](https://multiqc.info/examples/wgs/multiqc_report.html)
@@ -33,7 +33,7 @@ The basic steps in the differential expression pipeline include:
   - Identifying statistically significant DE genes using [DESeq2](https://bioconductor.org/packages/release/bioc/html/DESeq2.html)
   - Functional enrichment analysis using [clusterProfiler](https://bioconductor.org/packages/release/bioc/html/clusterProfiler.html)
 
-We will go over each of the above steps in more details
+We will discuss each of the steps in detail.
 
 
 
