--- a/_episodes/2.1_The_pipeline.md
+++ b/_episodes/2.1_The_pipeline.md
@@ -3,15 +3,15 @@ title: "A typical differential expression (DE) pipeline"
 teaching: 10
 exercises: 0
 questions:
-- "What are the steps in the DE pipeline?"
-- ""
-- "What is nfcore?"
+- "What are the different steps in a typical DE pipeline?"
 
 objectives:
 - "Get familier with the DE analysis pipeline"
 keypoints:
-- 
-- 
+- Tools such as FastQC can be used for assessing the sequencing read-quality.
+- Trim galore is one of the many tools available for read-trimming based on multiple criteria.
+- We can use an aligner such as `STAR` to map the reads to the reference genome/transcriptome.
+- The identification of statistically significant DE genes can be done using R libraries such as `DeSeq2`.
 ---
 
 
