--- a/_episodes/2.2_fastQ_and_fastQC.md
+++ b/_episodes/2.2_fastQ_and_fastQC.md
@@ -16,12 +16,12 @@ keypoints:
 ---
 
 __Challenge__
-- Identify
+- __Identify__
   - How many sequences were in SRR3473989_selected.fastq?
   - What are the lengths of the reads in SRR3473989.fastq?
   - Which part of the reads tend to have worse per base sequence quality? `Hint`- Use the tool for visualisation of read quality 
 
-- Download one of the fastqc reports.
+- __From Fastqc reports__
   - What do you think each of the components means? Refer to the documentation if needed.
   - Do you think this dataset is of “good” quality? 
 
