--- a/_episodes/2.2_fastQ_and_fastQC.md
+++ b/_episodes/2.2_fastQ_and_fastQC.md
@@ -15,6 +15,17 @@ keypoints:
 - 
 ---
 
+### FastQ format
+<p align="center">
+  <img src="{{ page.root }}/fig/FastQ.png" style="margin:10px;height:300px"/>
+</p>
+
+### FastQC
+<p align="center">
+  <img src="{{ page.root }}/fig/fastqQC.png" style="margin:10px;height:300px"/>
+</p>
+
+
 __Challenge__
 - __Identify__
   - How many sequences were in SRR3473989_selected.fastq?
