--- a/_episodes/2.2_fastQ_and_fastQC.md
+++ b/_episodes/2.2_fastQ_and_fastQC.md
@@ -17,8 +17,10 @@ keypoints:
 
 ### FastQ format
 <p align="center">
-  <img src="{{ page.root }}/fig/FastQ.png" style="margin:10px;height:300px"/>
+  <img src="{{ page.root }}/fig/fastq_format.png" style="margin:10px;height:300px"/>
 </p>
+
+
 
 ### FastQC
 <p align="center">
