--- a/_episodes/2.2_fastQ_and_fastQC.md
+++ b/_episodes/2.2_fastQ_and_fastQC.md
@@ -20,12 +20,26 @@ keypoints:
   <img src="{{ page.root }}/fig/fastq_format.png" style="margin:10px;height:300px"/>
 </p>
 
+### Phred Quality Scores
 
+<p align="center">
+  <img src="{{ page.root }}/fig/Phred_quality.png" style="margin:10px;height:300px"/>
+</p>
+
+__Challenge__
+
+- Using corresponding ‘Dec’ values in this ASCII table (http://www.asciitable.com/ ), what is the Phred quality score of the first base in read provided in SRR3473984_selected.fastq?
+
+- Now that you have determined the Phred score for the first base in the previous example, what is the probability (P) that this base was incorrectly called by the sequencing machine?
+
+- Why do we use ASCII to encode quality scores?
 
 ### FastQC
 <p align="center">
   <img src="{{ page.root }}/fig/fastqQC.png" style="margin:10px;height:300px"/>
 </p>
+
+
 
 
 __Challenge__
