--- a/_episodes/2.2_fastQ_and_fastQC.md
+++ b/_episodes/2.2_fastQ_and_fastQC.md
@@ -4,6 +4,7 @@ teaching: 10
 exercises: 0
 questions:
 - "What is FastQ?"
+- "What are Phred quality scores?"
 - "How to evaluate the quality using fastQC"
 
 
