--- a/_episodes/2.3_Trimming.md
+++ b/_episodes/2.3_Trimming.md
@@ -3,15 +3,15 @@ title: "Trimming"
 teaching: 5
 exercises: 10
 questions:
-- "Why trim RNA seqeuncig reads?"
+- "Why trim RNA sequencing reads?"
 
 objectives:
 - "Understand the requirement for trimming RNA sequencing reads"
 - "Understand the pros and cons of trimming"
 
 keypoints:
-- 
-- 
+- Tools such as Trim galore and trimmomatic can be used for read-trimming
+- FastQC can be used to visualise if the trimming step helped improve the read-set.
 ---
 
 - Trimming is sometimes performed to improve the quality of the raw data and potentially improve its mappability. There are several ways to perform trimming:
