--- a/_episodes/1.1_refresh_bash.md
+++ b/_episodes/1.1_refresh_bash.md
@@ -135,4 +135,18 @@ $ less words.txt
 
 
 
+> ## Your Project is your key!
+>
+> Let's say this again: **Everything** that can happen on Artemis is managed by _projects_.
+>
+> You need an Artemis-enabled _project_ to gain access to Artemis.
+>
+> You need to specify a _project_ when requesting Artemis resources.
+>
+> You can only access the **/project** and **/scratch** directories of _your project_.
+>
+> _**Project**_!!  :smirk:
+{: .keypoints}
+
+
 {% include links.md %}
