--- a/_episodes/1.1_refresh_bash.md
+++ b/_episodes/1.1_refresh_bash.md
@@ -148,5 +148,15 @@ $ less words.txt
 > _**Project**_!!  :smirk:
 {: .keypoints}
 
+> ## Change #1
+> Specify your **project**.
+>
+> Use the ```-P``` PBS directive to specify the _**Training**_ project, using its _short name_.
+> ~~~
+> #PBS -P Training
+> ~~~
+> {: .language-bash}
+{: .solution}
+
 
 {% include links.md %}
