--- a/_episodes/2.1_The_pipeline.md
+++ b/_episodes/2.1_The_pipeline.md
@@ -3,7 +3,7 @@ title: "A typical differential expression (DE) pipeline"
 teaching: 10
 exercises: 0
 questions:
-- "What are the different steps in a typical DE pipeline?"
+- "What are the different steps in a typical differential expression (DE) pipeline?"
 
 objectives:
 - "Get familier with the DE analysis pipeline"
