--- a/_episodes/2.2_fastQ_and_fastQC.md
+++ b/_episodes/2.2_fastQ_and_fastQC.md
@@ -27,13 +27,6 @@ keypoints:
   <img src="{{ page.root }}/fig/Phred_quality.png" style="margin:10px;height:300px"/>
 </p>
 
-__Challenge__
-
-- Using corresponding ‘Dec’ values in this ASCII table (http://www.asciitable.com/ ), what is the Phred quality score of the first base in read provided in SRR3473984_selected.fastq?
-
-- Now that you have determined the Phred score for the first base in the previous example, what is the probability (P) that this base was incorrectly called by the sequencing machine?
-
-- Why do we use ASCII to encode quality scores?
 
 ### FastQC
 <p align="center">
@@ -41,16 +34,24 @@ __Challenge__
 </p>
 
 
+> ## Challenge #1
+> __Identify__
+>
+> - How many sequences were in SRR3473989_selected.fastq?
+> - What are the lengths of the reads in SRR3473989.fastq?
+> - Which part of the reads tend to have worse per base sequence quality? `Hint`- Use the tool for visualisation of read quality 
+> {: .language-bash}
+{: .solution}
+
+> ## Challenge #2
+> 
+> __From Fastqc reports__
+> - What do you think each of the components means? Refer to the documentation if needed.
+> - Do you think this dataset is of “good” quality? 
 
 
-__Challenge__
-- __Identify__
-  - How many sequences were in SRR3473989_selected.fastq?
-  - What are the lengths of the reads in SRR3473989.fastq?
-  - Which part of the reads tend to have worse per base sequence quality? `Hint`- Use the tool for visualisation of read quality 
-
-- __From Fastqc reports__
-  - What do you think each of the components means? Refer to the documentation if needed.
-  - Do you think this dataset is of “good” quality? 
-
+> ## Challenge #3
+> Using corresponding ‘Dec’ values in this ASCII table (http://www.asciitable.com/ ), what is the Phred quality score of the first base in read provided in SRR3473984_selected.fastq?
+> Now that you have determined the Phred score for the first base in the previous example, what is the probability (P) that this base was incorrectly called by the sequencing machine?
+> Why do we use ASCII to encode quality scores?
 
