--- a/_episodes/2.2_fastQ_and_fastQC.md
+++ b/_episodes/2.2_fastQ_and_fastQC.md
@@ -44,14 +44,15 @@ keypoints:
 {: .solution}
 
 > ## Challenge #2
-> 
 > __From Fastqc reports__
 > - What do you think each of the components means? Refer to the documentation if needed.
 > - Do you think this dataset is of “good” quality? 
-
+> {: .language-bash}
+{: .solution}
 
 > ## Challenge #3
-> Using corresponding ‘Dec’ values in this ASCII table (http://www.asciitable.com/ ), what is the Phred quality score of the first base in read provided in SRR3473984_selected.fastq?
-> Now that you have determined the Phred score for the first base in the previous example, what is the probability (P) that this base was incorrectly called by the sequencing machine?
-> Why do we use ASCII to encode quality scores?
-
+> - Using corresponding ‘Dec’ values in this ASCII table (http://www.asciitable.com/ ), what is the Phred quality score of the first base in read provided in SRR3473984_selected.fastq?
+> - Now that you have determined the Phred score for the first base in the previous example, what is the probability (P) that this base was incorrectly called by the sequencing machine?
+> - Why do we use ASCII to encode quality scores?
+> {: .language-bash}
+{: .solution}
