--- a/_episodes/2.2_fastQ_and_fastQC.md
+++ b/_episodes/2.2_fastQ_and_fastQC.md
@@ -20,12 +20,16 @@ keypoints:
 <p align="center">
   <img src="{{ page.root }}/fig/fastq_format.jpg" style="margin:10px;height:300px"/>
 </p>
+- [FASTQ](https://en.wikipedia.org/wiki/FASTQ_format) format is a text-based format for storing both a biological sequence (usually nucleotide sequence) and its corresponding quality scores.
+- Both the sequence letter and quality score are each encoded with a single ASCII character for brevity.
 
 ### Phred Quality Scores
 
 <p align="center">
-  <img src="{{ page.root }}/fig/Phred_quality.png" style="margin:10px;height:300px"/>
+  <img src="{{ page.root }}/fig/Phred_quality.png" style="margin:10px;height:200px"/>
 </p>
+- The quality score which assess reliability of each base call is calculated as Phred quality score.
+- Several different encodings have been used throughout the years to report on this by Illumina, and the [Wikipedia](https://en.wikipedia.org/wiki/FASTQ_format) page is the best place to figure out the most updated.
 
 
 ### FastQC
@@ -33,6 +37,8 @@ keypoints:
   <img src="{{ page.root }}/fig/fastqQC.png" style="margin:10px;height:300px"/>
 </p>
 
+- [FastQC](https://www.bioinformatics.babraham.ac.uk/projects/fastqc/) aims to provide a simple way to do some quality control checks on raw sequence data coming from high throughput sequencing pipelines.
+- It provides a modular set of analyses which you can use to give a quick impression of whether your data has any problems of which you should be aware before doing any further analysis.
 
 > ## Challenge #1
 > __Identify__
