--- a/_episodes/2.2_fastQ_and_fastQC.md
+++ b/_episodes/2.2_fastQ_and_fastQC.md
@@ -23,6 +23,19 @@ keypoints:
 - [FASTQ](https://en.wikipedia.org/wiki/FASTQ_format) format is a text-based format for storing both a biological sequence (usually nucleotide sequence) and its corresponding quality scores.
 - Both the sequence letter and quality score are each encoded with a single ASCII character for brevity.
 
+> ## Challenge #1
+__Identify__
+- How many sequences were in SRR3473989_selected.fastq?
+> ```
+> 200000
+> ```
+- What are the lengths of the reads in SRR3473989_selected.fastq?
+> ```1
+> 100 bp
+> ```
+> {: .language-bash}
+{: .solution}
+
 ### Phred Quality Scores
 
 <p align="center">
@@ -40,23 +53,18 @@ keypoints:
 - [FastQC](https://www.bioinformatics.babraham.ac.uk/projects/fastqc/) aims to provide a simple way to do some quality control checks on raw sequence data coming from high throughput sequencing pipelines.
 - It provides a modular set of analyses which you can use to give a quick impression of whether your data has any problems of which you should be aware before doing any further analysis.
 
-> ## Challenge #1
-> __Identify__
->
-> - How many sequences were in SRR3473989_selected.fastq?
-> - What are the lengths of the reads in SRR3473989.fastq?
-> - Which part of the reads tend to have worse per base sequence quality? `Hint`- Use the tool for visualisation of read quality 
-> {: .language-bash}
-{: .solution}
+
 
 > ## Challenge #2
 > __From Fastqc reports__
+> - Which part of the reads tend to have worse per base sequence quality? `Hint`- Use the tool for visualisation of read quality 
 > - What do you think each of the components means? Refer to the documentation if needed.
 > - Do you think this dataset is of “good” quality? 
 > {: .language-bash}
 {: .solution}
 
-> ## Challenge #3
+
+> ## Additional Challenge #3
 > - Using corresponding ‘Dec’ values in this ASCII table (http://www.asciitable.com/ ), what is the Phred quality score of the first base in read provided in SRR3473984_selected.fastq?
 > - Now that you have determined the Phred score for the first base in the previous example, what is the probability (P) that this base was incorrectly called by the sequencing machine?
 > - Why do we use ASCII to encode quality scores?
