--- a/_episodes/2.2_fastQ_and_fastQC.md
+++ b/_episodes/2.2_fastQ_and_fastQC.md
@@ -39,7 +39,7 @@ __Identify__
 ### Phred Quality Scores
 
 <p align="center">
-  <img src="{{ page.root }}/fig/Phred_quality.png" style="margin:10px;height:200px"/>
+  <img src="{{ page.root }}/fig/Phred_short.png" style="margin:10px;height:200px"/>
 </p>
 - The quality score which assess reliability of each base call is calculated as Phred quality score.
 - Several different encodings have been used throughout the years to report on this by Illumina, and the [Wikipedia](https://en.wikipedia.org/wiki/FASTQ_format) page is the best place to figure out the most updated.
