--- a/_episodes/2.2_fastQ_and_fastQC.md
+++ b/_episodes/2.2_fastQ_and_fastQC.md
@@ -24,12 +24,12 @@ keypoints:
 - Both the sequence letter and quality score are each encoded with a single ASCII character for brevity.
 
 > ## Challenge #1
-__Identify__
+> __Identify__
 - How many sequences were in SRR3473989_selected.fastq?
 > ```
-> 200000
+> 104,404
 > ```
-- What are the lengths of the reads in SRR3473989_selected.fastq?
+> - What are the lengths of the reads in SRR3473989_selected.fastq?
 > ```1
 > 100 bp
 > ```
@@ -57,7 +57,7 @@ __Identify__
 
 > ## Challenge #2
 > __From Fastqc reports__
-> - Which part of the reads tend to have worse per base sequence quality? `Hint`- Use the tool for visualisation of read quality 
+> - Which part of the reads tend to have worse per base sequence quality? 
 > - What do you think each of the components means? Refer to the documentation if needed.
 > - Do you think this dataset is of “good” quality? 
 > {: .language-bash}
