--- a/_episodes/2.3_Trimming.md
+++ b/_episodes/2.3_Trimming.md
@@ -26,11 +26,14 @@ __NOTE:__
 - Trimming of high quality adapter sequences was shown to increase quality and reliability of biological signals in RNA-seq data (Dozmorov et al., 2015)
 
 
-__CHALLENGE__
-- From looking into the results folder, can you tell :
-  - Which tool does nfcore-rnaseq use for read-trimming?
-  - Was there an effect of the trimming step on the sample? Choose one sample e.g. SRR3473989
-    - Which tool did you use for visualisation of the quality? Before and after trimming?
-    - Which folders in the 'results' did you need to access? 
+> ## Challenge
+> From looking into the results folder in the path `~/base_directory/working_directory/`, can you tell :
+> - Which tool does nfcore-rnaseq use for read-trimming?
+> - Was there an effect of the trimming step on the sample SRR3473989_selected.fastq?
+>     - Which tool did you use for visualisation of the quality; Before and after trimming?
+>     - Which folders in the 'results' did you need to access? 
+> {: .language-bash}
+{: .solution}
+
   
 
