--- a/_episodes/2.1_The_pipeline.md
+++ b/_episodes/2.1_The_pipeline.md
@@ -1,12 +1,12 @@
 ---
-title: "A typical differential expression (DE) pipeline"
+title: "The steps involved in analysis of RNA-seq data"
 teaching: 10
 exercises: 0
 questions:
-- "What are the different steps in a typical differential expression (DE) pipeline?"
+- "What are the different steps in a typical RNA-seq differential expression (DE) pipeline?"
 
 objectives:
-- "Get familier with the DE analysis pipeline"
+- "Get familier with the RNA-seq DE analysis pipeline"
 keypoints:
 - Tools such as FastQC can be used for assessing the sequencing read-quality.
 - Trim galore is one of the many tools available for read-trimming based on multiple criteria.
