--- a/_episodes/1.0_Learning_objectives.md
+++ b/_episodes/1.0_Learning_objectives.md
@@ -6,7 +6,7 @@ questions:
 - "What is RNA-Seq?"
 - "What is the case-study for this workshop?"
 - "How to use bash terminal?"
-- "What are the steps in differential expression analysis?"
+- "What are the steps in RNA-seq differential expression analysis?"
 - "Nextfow workflows for Bioinformatics: Why bother?"
 - "How to run 'nfcore-rnaseq' on the Nimbus instance?"
 - "What are the imporatant nfcore-rnaseq inputs and outputs?"
@@ -33,15 +33,7 @@ keypoints:
 . Experimental question
 ```
 
-#### Refresh your unix shell (bash) skills
-```
-- Opening a terminal window.
-- Handling directories and files.
-- Visualising contents of text files.
-```
-
-
-#### Basic steps in the differential expression pipeline
+#### List the steps involved in analysis of RNA-seq data
 ```
 - Check sequencing read quality
 - Trimming seqeuncing reads 
@@ -49,26 +41,20 @@ keypoints:
 - Differential Expression Analysis
 ```
 
-#### Step I :  Why use nfcore-rnaseq?
+#### Describe the benefits of using nf-core workflows
 ```
 - A typical bioinformatics workflow - too complicated?
 - Nextflow as a workflow management systems, how does it help?
 - Use nfcore’s rnaseq pipeline to transform raw sequencing data into analysis ready count data.
 ```
 
-#### Pawsey/Nimbus VM: A platform to run nfcore-rnaseq pipeline 
+#### Deploy an RNA-seq nf-core workflow on Pawsey’s Nimbus VM
 ```
-- The Pawsey/Nimbus virtual machine (VM)
-- Introduction to trainee VMs from Pawsey
-- How to log on to a trainee VM?
-```
-
-#### How to run nfcore-rnaseq on the Pawsey/Nimbus VM
-```
-- What are basic steps involved?
+- What is the core nfcore-rnaseq command?
 - What are the main inputs?
 - What are the main outputs? 
-- What do we carry forward to DAY2: The gene-count matrix
+- Can we add/remove/change the tools/parameters used for the various processes?
+- What do we carry forward to DAY 2: The gene-count matrix
 ```
 
 ___
