--- a/_episodes/2.4_Alignment_using_STAR.md
+++ b/_episodes/2.4_Alignment_using_STAR.md
@@ -3,17 +3,23 @@ title: "Alignment to reference genome"
 teaching: 5
 exercises: 10
 questions:
-- "Why trim RNA seqeuncig reads?"
+- "How to map seqeuncig reads to a reference genome?"
 
 objectives:
-- "Understand the requirement for trimming RNA sequencing reads"
-- "Understand the pros and cons of trimming"
+- "Understand the alignment/mapping process"
+- "Understand the outout sam/bam formats"
 
 keypoints:
 - 
 - 
 ---
 
+- After trimming, the next step of processing RNA-seq data is to map the reads to a reference genome. 
+- RNA-seq specific aligner needs to be used to accomodate splicing.
+- The most commonly used aligners for short-read sequencing are STAR, HISAT2 etc.
+- The output of the alignment step is a [bam](https://en.wikipedia.org/wiki/SAM_(file_format)) file, which is a compressed ("B"inary) form of a [sam](https://en.wikipedia.org/wiki/SAM_(file_format)) file.
 
 
-https://sydney-informatics-hub.github.io/training-RNAseq/03-MapReads/index.html
+
+
+{% include links.md %}
